# armWorkCS

./: 1018test.py  1029.cpp  MUJOCO_LOG.TXT  README.md  errorTest.bag  eval "$(ssh-agent -s)"  eval "$(ssh-agent -s)".pub  jointError1122.bag.active  new_ad.cpp  quantized.py  sintest.bag  test.py  testCPP.cpp  testwebbo.py  wayPoint.bag
devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/include/llm_msgs/: get_angle_act.h  get_angle_actRequest.h  get_angle_actResponse.h  get_status.h  get_statusRequest.h  get_statusResponse.h  hand_pose_req.h  pose_action_status.h  robot_state.h  set_angle.h  set_angleRequest.h  set_angleResponse.h  set_force.h  set_forceRequest.h  set_forceResponse.h  set_speed.h  set_speedRequest.h  set_speedResponse.h
devel/lib/arm_aubo_trac_ik/: ik_test
devel/lib/aubo_arm_planning/: gripper  ikfist_test  move_to_2.py
devel/lib/gripper_use/: gripper_use
devel/lib/pkgconfig/: admittanceController.pc  admittance_controller.pc  admmittance_controller.pc  arm_aubo_trac_ik.pc  arm_kinematics_solver.pc  aubo_arm_l.pc  aubo_arm_planning.pc  aubo_arm_r.pc  gripper_use.pc  llm_msgs.pc  test_planning.pc  trac_ik_examples.pc  trac_ik_lib.pc  trajectory_planner.pc
devel/lib/test_planning/: mujocoSim  test_planning  (+4 more)
src-old/: README.md
src-old/arm_planning/gripper_use/: CMakeLists.txt
src-old/arm_planning/gripper_use/src/: gripper.cpp
src-old/arm_planning/llm_msgs/: CMakeLists.txt
src-old/arm_planning/llm_msgs/msg/: hand_pose_req.msg  pose_action_status.msg  robot_state.msg
src-old/arm_planning/llm_msgs/srv/: get_status.srv  set_speed.srv
src-old/arm_planning/test_planning/: CMakeLists.txt  package.xml
src-old/arm_planning/test_planning/src/: test_admmittance.cpp  test_arm.cpp  test_force_filter.cpp  test_force_generator.cpp
src/arm_planning/: README.md
src/arm_planning/arm_aubo_trac_ik/: CMakeLists.txt
src/arm_planning/arm_aubo_trac_ik/launch/: ik_test.launch
src/arm_planning/arm_aubo_trac_ik/src/: arm_ik.cpp
src/arm_planning/arm_aubo_trac_ik/urdf/: AUBO_HRM.urdf  new_serial_head.urdf  serial_head.urdf
src/arm_planning/test_planning/: CMakeLists.txt  package.xml
src/arm_planning/test_planning/config/: arm_controllers.yaml  controller.yaml
src/arm_planning/test_planning/include/: GLFW_callbacks.h  ImpedanceControl.h  MJ_interface.h  PDcon.hpp  VariableImpedanceControl.h  dualArmHQP.h  dualArmMpc.h  robotPara.h  test_arm.h  test_gazebo.h  test_stand.h
src/arm_planning/test_planning/launch/: sim_gazebo.launch  sim_launch.launch  sim_rviz.launch  sim_test.launch
src/arm_planning/test_planning/meshes/: arm_base_r_link.STL  elbow_yaw_l_link.STL  elbow_yaw_r_link.STL  hip_roll_r_link.STL  hip_yaw_l_link.STL  shoulder_pitch_r_link.STL  shoulder_roll_l_link.STL  wrist_roll_l_link.STL
src/arm_planning/test_planning/model/: humanoid.urdf  humanoida.xarco  testmujoco2.xml
src/arm_planning/test_planning/model/meshes/: ankle_pitch_l_link.STL  ankle_pitch_r_link.STL  ankle_roll_r_link.STL  arm_yaw_r_link.STL  elbow_pitch_l_link.STL  elbow_pitch_r_link.STL  shoulder_roll_r_link.STL  testmujoco2.xml  wrist_pitch_l_link.STL  wrist_pitch_r_link.STL  wrist_roll_r_link.STL
src/arm_planning/test_planning/model2/: max3wqpused.urdf
src/arm_planning/test_planning/model2/meshes/: waist_link1.STL
src/arm_planning/test_planning/model2/meshes/hand/: Link11_R.STL.convex.stl  Link14_L.STL.convex.stl  Link15_R.STL.convex.stl  Link18_R.STL.convex.stl  Link20_R.STL.convex.stl  Link21_L.STL.convex.stl  Link22_R.STL.convex.stl
src/arm_planning/test_planning/model2/meshes/left_arm/collision/: link0.STL  link1.STL  link4.STL  link5.STL
src/arm_planning/test_planning/model2/meshes/left_arm/visual/: link7.STL
src/arm_planning/test_planning/model2/meshes/right_arm/collision/: link5.STL  link6.STL
src/arm_planning/test_planning/model2/meshes/right_arm/visual/: link0.STL  link3.STL  link7.STL
src/arm_planning/test_planning/model2/urdf/: dual_arm_and_hand_description.urdf  dual_arm_description.urdf  max3wqpused.urdf
src/arm_planning/test_planning/model3/: max3new.xml  max3wqpused.urdf  mjmodel.xml
src/arm_planning/test_planning/model3/meshes/: Link11_L.STL.convex.stl  Link12_L.STL.convex.stl  Link12_R.STL.convex.stl  Link13_L.STL.convex.stl  Link13_R.STL.convex.stl  Link14_R.STL.convex.stl  Link15_L.STL.convex.stl  Link16_L.STL.convex.stl  Link16_R.STL.convex.stl  Link17_L.STL.convex.stl  Link18_L.STL.convex.stl  Link19_L.STL.convex.stl  Link20_L.STL.convex.stl  Link21_R.STL.convex.stl  Link22_L.STL.convex.stl  l_link2.STL  l_link3.STL  l_link6.STL  r_link1.STL  r_link2.STL  r_link4.STL  waist_link2.STL
src/arm_planning/test_planning/model3/urdf/: dual_arm_and_hand_description.urdf  dual_arm_description.urdf
src/arm_planning/test_planning/rviz/: display.rviz  joint_names_cloudfarming_description.yaml  max30107.rviz  urdf.rviz
src/arm_planning/test_planning/src/: ImpedanceControl.cpp  dualArmHQP.cpp  dualArmMpc.cpp  mujocoSim.cpp  robotPara.cpp  test_admmittance.cpp  test_arm.cpp  test_force_filter.cpp  test_force_generator.cpp  test_gazebo.cpp  test_jointCtrl.cpp  test_load_calibration.cpp  test_stand.cpp
src/arm_planning/test_planning/src/sim_interface/: MJ_interface.cpp
src/arm_planning/test_planning/x_humanoid_ultra_noeyes/meshes/: ankle_roll_l_link.STL  arm_base_l_link.STL  arm_yaw_l_link.STL  elbow_pitch_l_link.STL  elbow_pitch_r_link.STL  head_base_link.STL  hip_roll_l_link.STL  hip_yaw_r_link.STL  shoulder_pitch_l_link.STL
src/arm_planning/test_planning/x_humanoid_ultra_noeyes/mjcf/: humanoid.xml
src/arm_planning/test_planning/x_humanoid_ultra_noeyes/urdf/: humanoid.urdf  tiangong_ultra.csv
src/trajectory_planner/: CMakeLists.txt
src/trajectory_planner/include/trajectory_planner/: interpolation.h  traj_planner_base.h
src/trajectory_planner/src/: interpolation.cpp  sVelocityPlanner.cpp  traj_s_planner.cpp
src/wbc/: CMakeLists.txt  package.xml
src/wbc/include/include/OsqpEigen/: Settings.hpp
src/wbc/lib/: libqpOASES.so.3.2
src/wbc/robotData/: robotData.cpp  robotData.h
src/wbc/test/: testMain.cpp
(+154 files in other folders)
