<?xml version="1.0"?>
<package format="2">
  <name>wbc</name>
  <version>0.0.0</version>
  <description>The wbc package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="nikoo@todo.todo">nikoo</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
    <!-- 依赖项 -->
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>pinocchio</depend>
  <depend>osqpEigen</depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>
