<?xml version="1.0"?>
<package format="2">
  <name>test_planning</name>
  <version>0.0.0</version>
  <description>The test_planning package</description>
  <maintainer email="hy@ucas.com">he yan</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>interactive_markers</depend>
  
</package>
